[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/background.checklist.png" type="Texture" id=1]
[ext_resource path="res://assets/Checklist.png" type="Texture" id=2]
[ext_resource path="res://assets/ChecklistScene.gd" type="Script" id=3]
[ext_resource path="res://Retro Gaming.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Icon.errado.png" type="Texture" id=5]
[ext_resource path="res://assets/Botão conferir.png" type="Texture" id=6]
[ext_resource path="res://assets/Jacquis/Jacquis.boné.esq.png" type="Texture" id=7]
[ext_resource path="res://assets/Balao b.png" type="Texture" id=8]
[ext_resource path="res://checklist_scene/1C96E44B-EABB-4109-AA26-8F16ABE1898F.jpg" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 1, 0.987097 )
script = ExtResource( 3 )

[node name="BotãoConferir" type="Sprite" parent="."]
position = Vector2( 691, 522.745 )
scale = Vector2( 0.187918, 0.187919 )
texture = ExtResource( 6 )

[node name="Backgroundchecklist" type="Sprite" parent="."]
position = Vector2( 515, 303.217 )
scale = Vector2( 0.936336, 0.941668 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Backgroundnovo" type="Sprite" parent="."]
position = Vector2( 516.5, 305.441 )
scale = Vector2( 0.787396, 0.809107 )
texture = ExtResource( 9 )

[node name="Checklist" type="Sprite" parent="."]
position = Vector2( 280, 291 )
scale = Vector2( 0.76875, 0.76875 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Checklist"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 202.0
margin_top = 146.895
margin_right = 451.0
margin_bottom = 174.895
custom_fonts/font = SubResource( 1 )
text = "Conferir a documentação"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0666667, 0.00784314, 0.00784314, 1 )
margin_left = 203.0
margin_top = 191.471
margin_right = 455.0
margin_bottom = 212.471
custom_fonts/font = SubResource( 2 )
text = "Dirigir cansado"

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 202.0
margin_top = 238.0
margin_right = 459.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 3 )
text = "Conferir o limite de carga"

[node name="Label4" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 204.0
margin_top = 285.0
margin_right = 430.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 4 )
text = "Beber uma cerveja"

[node name="Label5" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 203.0
margin_top = 335.327
margin_right = 478.0
margin_bottom = 360.327
custom_fonts/font = SubResource( 6 )
text = "Conferir o nível de gasolina"

[node name="Label6" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 206.0
margin_top = 385.98
margin_right = 374.0
margin_bottom = 406.98
custom_fonts/font = SubResource( 5 )
text = "Viajar à 90km/h"

[node name="CheckBox" type="CheckBox" parent="."]
modulate = Color( 0.909804, 0.901961, 0.901961, 1 )
margin_left = 120.0
margin_top = 144.0
margin_right = 144.0
margin_bottom = 168.0
rect_scale = Vector2( 1.54726, 1.63014 )

[node name="CheckBox2" type="CheckBox" parent="."]
margin_left = 121.0
margin_top = 194.0
margin_right = 145.0
margin_bottom = 218.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="CheckBox3" type="CheckBox" parent="."]
margin_left = 120.0
margin_top = 242.0
margin_right = 144.0
margin_bottom = 266.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="CheckBox4" type="CheckBox" parent="."]
margin_left = 121.0
margin_top = 292.0
margin_right = 145.0
margin_bottom = 316.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="CheckBox5" type="CheckBox" parent="."]
margin_left = 121.0
margin_top = 342.0
margin_right = 145.0
margin_bottom = 366.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="CheckBox6" type="CheckBox" parent="."]
margin_left = 122.0
margin_top = 389.0
margin_right = 146.0
margin_bottom = 413.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="Button" type="Button" parent="."]
margin_left = 538.0
margin_top = 470.0
margin_right = 664.0
margin_bottom = 501.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 7 )
text = "Conferir"

[node name="Jacquisbonéesq" type="Sprite" parent="."]
position = Vector2( 1012.05, 295.815 )
rotation = -0.261799
scale = Vector2( 5.21323, 5.21323 )
texture = ExtResource( 7 )

[node name="BalaoB" type="Sprite" parent="."]
position = Vector2( 744.5, 173.742 )
scale = Vector2( 4.81, 4.1232 )
texture = ExtResource( 8 )
flip_h = true

[node name="Label8" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 556.0
margin_top = 71.9281
margin_right = 1011.0
margin_bottom = 140.928
custom_fonts/font = SubResource( 8 )
text = "Antes de iniciar selecione as ações 
corretas para o percurso. Lembre-se
 de sempre priorizar a segurança!"

[node name="X6" type="Sprite" parent="."]
position = Vector2( 192, 396.111 )
scale = Vector2( 0.0287584, 0.0285394 )
texture = ExtResource( 5 )

[node name="X1" type="Sprite" parent="."]
position = Vector2( 192, 152.974 )
scale = Vector2( 0.0287584, 0.0285394 )
texture = ExtResource( 5 )

[node name="X2" type="Sprite" parent="."]
position = Vector2( 191, 201.601 )
scale = Vector2( 0.0287584, 0.0285394 )
texture = ExtResource( 5 )

[node name="X3" type="Sprite" parent="."]
position = Vector2( 191, 251.242 )
scale = Vector2( 0.0287584, 0.0285394 )
texture = ExtResource( 5 )

[node name="X4" type="Sprite" parent="."]
position = Vector2( 190, 294.804 )
scale = Vector2( 0.0287584, 0.0285394 )
texture = ExtResource( 5 )

[node name="X5" type="Sprite" parent="."]
position = Vector2( 190, 347.484 )
scale = Vector2( 0.0287584, 0.0285394 )
texture = ExtResource( 5 )

[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
